<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_margin="@dimen/margin_12"
        android:src="@drawable/card_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/headlineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_snans_bold"
            android:text="@string/ahmed_hassan"
            android:textColor="@color/black" />

        <TextView
            style="@style/bodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:fontFamily="@font/dm_scans_mediam"
            android:text="@string/engineer"
            android:textColor="@color/grey87" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:src="@drawable/ic_location" />

            <TextView
                style="@style/subBodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_scans_regular"
                android:text="@string/uk" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_11">

            <TextView
                style="@style/bodyText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_scans_regular"
                android:text="@string/_150_reviews_4_5"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_3"
                android:src="@drawable/ic_star" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_12"
        android:orientation="vertical">

        <TextView
            style="@style/bodyText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_bk"
            android:fontFamily="@font/dm_scans_regular"
            android:text="@string/_3_hr"
            android:textColor="@color/white" />

        <TextView
            style="@style/bodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:fontFamily="@font/dm_scans_mediam"
            android:text="@string/russian"
            android:textColor="@color/grey87" />

        <TextView
            style="@style/bodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_scans_regular"
            android:text="@string/days_ago"
            android:textColor="@color/grey38" />

    </LinearLayout>
</LinearLayout>
